<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="32dp"

    >


    <TextView
        android:id="@+id/studentRegistrationForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_registration_form"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"
    />

    <EditText
        android:id="@+id/studentId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/student_id"
        android:autofillHints="id"
    />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_full_name"
        android:autofillHints="username"
    />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_email"
        android:autofillHints="emailAddress"
    />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/enter_your_password"
        android:autofillHints="password"
    />

    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/enter_your_age"
        android:autofillHints="age"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="18sp"
    />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:focusableInTouchMode="true">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
    />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
    />
        <RadioButton
            android:id="@+id/radioOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
    />
    </RadioGroup>

    <Spinner
        android:id="@+id/dropDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:focusableInTouchMode="true"
    />

    <TextView
        android:id="@+id/favoriteGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/favorite_game"
        android:textSize="18sp"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical">
        <CheckBox
            android:id="@+id/fbFavoriteGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/football"
        />
        <CheckBox
            android:id="@+id/cricFavoriteGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cricket"
        />
        <CheckBox
            android:id="@+id/bdFavoriteGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/basketball"
        />
        <CheckBox
            android:id="@+id/badFavoriteGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/badminton"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:textSize="18sp"
            />
        <EditText
            android:id="@+id/btnDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:hint="@string/dd_mm_year"
            android:clickable="true"
            android:focusable="true"
            />

    </LinearLayout>


    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_marginTop="10dp"
    />


</LinearLayout>

</ScrollView>
